fixed button visibility on iOS

--- a/src/components/UI/MainMap/style.module.scss
+++ b/src/components/UI/MainMap/style.module.scss
@@ -35,6 +35,7 @@
 .menu {
   height: 100vh;
   margin-top: 18px;
+  z-index: 1001;
 
   .xIcon {
     cursor: pointer;
@@ -188,8 +189,6 @@
     }
   }
 } 
-// 10.08.2000
-//   dd.mm.yyyy
 .CloseLocationWrap {
   position: absolute;
   bottom: 0;
